Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-30346
QAbstractItemModel::moveColumn() calls moveRows() instead of moveColumns()
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P3: Somewhat important
Fix Version/s:
5.1.0
Affects Version/s:
5.0.1
,
5.0.2
Component/s:
Widgets: Itemviews
Labels:
None
Commits:
qtbase/stable: a7dc708eb57b8db55f2dd0380fabb4a4e64a39d1
Description
See subject.
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Unassigned
Reporter:
Dmitry Volosnykh
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
24 Mar '13 12:14
Updated:
06 Dec '18 09:25
Resolved:
23 Apr '13 16:26
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
Fix QAbstractItemModel::moveColumn()
Gerrit Review: